--- a/services/agent_runner/requirements.txt
+++ b/services/agent_runner/requirements.txt
@@ -1,5 +1,5 @@
 # requirements.txt
-# Dependências para o serviço do Agente Neural
+# Dependências para o serviço do Agente Neural - Lore N.A.
 
 # Biblioteca para fazer requisições HTTP para a API do Lore N.A.
 requests==2.32.3
@@ -7,12 +7,22 @@ requests==2.32.3
 # Biblioteca para geração e validação de JWT
 PyJWT==2.8.0
 
-# Dependências para análise de sentimento (MVM)
+# Dependências para análise de sentimento híbrida (MVM)
 asyncio  # Built-in, mas listado para clareza
 dataclasses  # Built-in no Python 3.7+
 
-# LeIA - Análise de Sentimento em Português (usado no Twitter/Instagram)
-leia==0.1.0
-
-# NLTK - Natural Language Toolkit com VADER Sentiment Analyzer
+# NLTK - Natural Language Toolkit (fallback para VADER)
 nltk>=3.8
+
+# TextBlob - Análise simples e eficiente de sentimento e subjetividade
+textblob>=0.17.1
+
+# Hugging Face Transformers - Estado da arte para análise contextual
+transformers>=4.21.0
+torch>=1.13.0
+
+# vaderSentiment - Análise especializada para redes sociais e textos informais
+vaderSentiment>=3.3.2
+
+# Protobuf - Necessário para os modelos Transformer
+protobuf>=3.20.0
