--- a/services/agent_runner/requirements.txt
+++ b/services/agent_runner/requirements.txt
@@ -26,3 +26,10 @@ vaderSentiment>=3.3.2
 
 # Protobuf - Necessário para os modelos Transformer
 protobuf>=3.20.0
+
+# 🧬 GENESIS PROTOCOL - Dependências para evolução genética
+numpy>=1.21.0
+scipy>=1.7.0
+matplotlib>=3.5.0
+pandas>=1.3.0
+seaborn>=0.11.0
