--- a/services/agent_runner/requirements.txt
+++ b/services/agent_runner/requirements.txt
@@ -1,16 +1,26 @@
 # requirements.txt
 # Dependências para o serviço do Agente Neural - Lore N.A.
 
+# === CORE DEPENDENCIES ===
 # Biblioteca para fazer requisições HTTP para a API do Lore N.A.
 requests==2.32.3
 
 # Biblioteca para geração e validação de JWT
 PyJWT==2.8.0
 
-# Dependências para análise de sentimento híbrida (MVM)
-asyncio  # Built-in, mas listado para clareza
-dataclasses  # Built-in no Python 3.7+
+# === WEB FRAMEWORK & API ===
+# FastAPI - Framework web moderno para APIs
+fastapi>=0.104.0
+uvicorn[standard]>=0.24.0
 
+# === DASHBOARD & VISUALIZATION ===
+# Streamlit - Dashboard web interativo
+streamlit>=1.28.0
+plotly>=5.17.0
+altair>=5.1.0
+
+# === DATA SCIENCE & ML ===
+# Dependências para análise de sentimento híbrida (MVM)
 # NLTK - Natural Language Toolkit (fallback para VADER)
 nltk>=3.8
 
@@ -27,9 +37,21 @@ vaderSentiment>=3.3.2
 # Protobuf - Necessário para os modelos Transformer
 protobuf>=3.20.0
 
-# 🧬 GENESIS PROTOCOL - Dependências para evolução genética
+# === GENESIS PROTOCOL - Dependências para evolução genética ===
 numpy>=1.21.0
 scipy>=1.7.0
 matplotlib>=3.5.0
 pandas>=1.3.0
 seaborn>=0.11.0
+
+# === GRAPH & NETWORK ANALYSIS ===
+networkx>=3.0
+community>=1.0.0
+
+# === DATABASE ===
+sqlite3  # Built-in, mas listado para clareza
+
+# === UTILITIES ===
+python-dateutil>=2.8.0
+colorama>=0.4.0
+tqdm>=4.64.0
