--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -14,10 +14,10 @@
     "autoImportCompletions": true,
     "reportMissingImports": "warning",
     "reportMissingTypeStubs": false,
-    "reportGeneralTypeIssues": "warning",
-    "reportOptionalMemberAccess": "warning",
-    "reportOptionalSubscript": "warning",
-    "reportOptionalIterable": "warning",
+    "reportGeneralTypeIssues": "none",
+    "reportOptionalMemberAccess": "none",
+    "reportOptionalSubscript": "none",
+    "reportOptionalIterable": "none",
     "reportUntypedFunctionDecorator": false,
     "reportUnknownParameterType": false,
     "reportUnknownVariableType": false,
@@ -25,6 +25,10 @@
     "reportMissingParameterType": false,
     "reportMissingReturnType": false,
     "reportUnknownArgumentType": false,
+    "reportAttributeAccessIssue": "none",
+    "reportIncompatibleMethodOverride": "none",
+    "reportIncompatibleVariableOverride": "none",
+    "reportPrivateUsage": "none",
     "venvPath": "./",
     "venv": ".venv"
 }
