--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -1,34 +1,41 @@
 {
-    "include": ["src", "tests", "main.py", "start.py", "validate_project.py"],
-    "exclude": [
-        "**/__pycache__",
-        "**/.pytest_cache",
-        "**/node_modules",
-        "**/.venv"
-    ],
-    "extraPaths": ["./src"],
-    "pythonVersion": "3.12",
-    "pythonPlatform": "Linux",
-    "typeCheckingMode": "basic",
-    "useLibraryCodeForTypes": true,
-    "autoImportCompletions": true,
-    "reportMissingImports": "warning",
-    "reportMissingTypeStubs": false,
+    "typeCheckingMode": "off",
     "reportGeneralTypeIssues": "none",
+    "reportMissingImports": "none",
+    "reportMissingTypeStubs": false,
     "reportOptionalMemberAccess": "none",
     "reportOptionalSubscript": "none",
     "reportOptionalIterable": "none",
-    "reportUntypedFunctionDecorator": false,
-    "reportUnknownParameterType": false,
-    "reportUnknownVariableType": false,
-    "reportUnknownMemberType": false,
-    "reportMissingParameterType": false,
-    "reportMissingReturnType": false,
-    "reportUnknownArgumentType": false,
     "reportAttributeAccessIssue": "none",
+    "reportCallIssue": "none",
+    "reportArgumentType": "none",
+    "reportAssignmentType": "none",
+    "reportOperatorIssue": "none",
+    "reportIndexIssue": "none",
+    "reportPrivateUsage": "none",
+    "reportUnknownParameterType": "none",
+    "reportUnknownVariableType": "none",
+    "reportUnknownMemberType": "none",
+    "reportUnknownArgumentType": "none",
+    "reportMissingParameterType": "none",
+    "reportMissingReturnType": "none",
+    "reportUntypedFunctionDecorator": "none",
     "reportIncompatibleMethodOverride": "none",
     "reportIncompatibleVariableOverride": "none",
-    "reportPrivateUsage": "none",
-    "venvPath": "./",
-    "venv": ".venv"
+    "reportConstantRedefinition": "none",
+    "reportImportCycles": "none",
+    "reportUnusedImport": "none",
+    "reportUnusedClass": "none",
+    "reportUnusedFunction": "none",
+    "reportUnusedVariable": "none",
+    "reportDuplicateImport": "none",
+    "exclude": [
+        "examples/",
+        "scripts/",
+        "tools/",
+        "**/__pycache__",
+        "**/.pytest_cache"
+    ],
+    "pythonVersion": "3.12",
+    "pythonPlatform": "Linux"
 }
