--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -193,9 +193,10 @@ jobs:
 
             - name: Log in to Docker Hub
               uses: docker/login-action@v3
+              continue-on-error: true
               with:
-                  username: ${{ secrets.DOCKER_USERNAME }}
-                  password: ${{ secrets.DOCKER_PASSWORD }}
+                  username: ${{ secrets.DOCKER_USERNAME || 'dummy' }}
+                  password: ${{ secrets.DOCKER_PASSWORD || 'dummy' }}
 
             - name: Extract metadata
               id: meta
@@ -213,7 +214,7 @@ jobs:
               with:
                   context: .
                   platforms: linux/amd64,linux/arm64
-                  push: true
+                  push: ${{ secrets.DOCKER_USERNAME != '' }}
                   tags: ${{ steps.meta.outputs.tags }}
                   labels: ${{ steps.meta.outputs.labels }}
                   cache-from: type=gha
