fix: Resolver warnings finais do GitHub Actions
🔧 **CI/CD Workflow:**
- Atualizar versões para Rust 1.80 + Python 3.12
- Simplificar Docker build (só build, sem push)
- Remover dependência de secrets para funcionar out-of-the-box
- Adicionar continue-on-error para login Docker

🐳 **Docker:**
- Criar Dockerfile.distroless para produção segura
- Documentar configuração de secrets opcionais
- Workflow de push separado (docker-push.yml.disabled)

📚 **Documentação:**
- Guia completo de configuração Docker
- Instruções para habilitar push quando necessário
- Comparação de segurança entre Dockerfiles

✅ **Resultado:**
- CI/CD funciona sem configuração adicional
- Docker secrets opcionais (não quebra sem eles)
- Push para registry configurável conforme necessidade

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,8 +8,8 @@ on:
 
 env:
     CARGO_TERM_COLOR: always
-    PYTHON_VERSION: "3.11"
-    RUST_VERSION: "1.75"
+    PYTHON_VERSION: "3.12"
+    RUST_VERSION: "1.80"
 
 jobs:
     # ============================
@@ -195,8 +195,8 @@ jobs:
               uses: docker/login-action@v3
               continue-on-error: true
               with:
-                  username: ${{ secrets.DOCKER_USERNAME || 'dummy' }}
-                  password: ${{ secrets.DOCKER_PASSWORD || 'dummy' }}
+                  username: dummy
+                  password: dummy
 
             - name: Extract metadata
               id: meta
@@ -209,12 +209,12 @@ jobs:
                       type=sha
                       type=raw,value=latest,enable={{is_default_branch}}
 
-            - name: Build and push
+            - name: Build only (no push)
               uses: docker/build-push-action@v5
               with:
                   context: .
                   platforms: linux/amd64,linux/arm64
-                  push: ${{ secrets.DOCKER_USERNAME != '' }}
+                  push: false
                   tags: ${{ steps.meta.outputs.tags }}
                   labels: ${{ steps.meta.outputs.labels }}
                   cache-from: type=gha
